# goblinvest

./: .gitignore  Project.toml  README.md  server.jl
config/: config.example.toml
goblinvest_core/: .gitignore  README.md  mkdocs.yml  pyproject.toml
goblinvest_core/docs/: api.md  examples.md  index.md
goblinvest_core/examples/: README.md
goblinvest_core/examples/load_transactions/: README.md  generate_fake_data.py  load_vault.py
goblinvest_core/src/goblinvest_core/: __init__.py  _password.py  encryption.py  vault.py
goblinvest_core/tests/: test_encryption.py  test_vault.py
public/: app.js  index.html  styles.css
src/: App.jl  auth.jl  config.jl  db.jl  responses.jl  routes.jl
src/api/: accounts.jl  auth.jl
